# Penny-Long-Term-Memory

./: MIGRATION_PLAN.md  MIRROR_STATUS.md  README.md
apps/lifeos-dashboard/: .env.example  .gitignore  ARCHITECTURE.md  DEPARTMENT_INSPECTION_DATA_CONTRACT.md  README.md  SCHEDULER_LEDGER.md  pyproject.toml  run_dashboard.py
apps/lifeos-dashboard/apps-script/: scheduler_ledger_web_app.gs
apps/lifeos-dashboard/automation/: ack_worker_cos_consumption.py  activate_adv050_test.cmd  activate_github_orchestration.cmd  chatgpt_worker_browser_dispatch.py  chatgpt_worker_browser_roundtrip.py  diagnose_group_prompt_diff.py  draft_department_boot.py  draft_logistics_boot.py  ingest_worker_hq_review.py  ingest_worker_result.py  ingest_worker_rob_validation.py  install_strict_dispatch_fix.cmd  open_department_chat.py  open_department_chat_group.py  open_department_chat_group_verified.py  open_worker_chat_group_verified.py  preview_worker_cos_consumption.py  probe_bottom_controls.py  probe_composer_clipboard.py  probe_composer_group_clipboard.py  probe_composer_group_write.py  reconnect_edge_cdp_bridge.py  repair_and_resume_adv050.cmd  restart_unified_lifeos.cmd  run_github_worker_orchestrator.py  run_synthetic_worker_browser_pilot.cmd  run_synthetic_worker_browser_pilot.py  run_synthetic_worker_desktop_pilot.py  run_synthetic_worker_result_repair_pilot.py  run_worker_advisory_dispatch.py  run_worker_hq_review_wake.py  start_lifeos_automation.cmd  validate_and_run_worker_operations.cmd
apps/lifeos-dashboard/lifeos_dashboard/: __init__.py  automation_foreground_guard_runtime.py  (+59 more)
(+367 files in other folders)
