[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifeos-dashboard"
version = "0.1.0"
description = "Local read-mostly LifeOS dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "jinja2>=3.1,<4.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
  "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
include = ["lifeos_dashboard*"]

[tool.setuptools.package-data]
lifeos_dashboard = [
  "data/*.json",
  "static/*.css",
  "static/*.js",
  "templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
